Sports page added (#3)

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,8 +10,8 @@ html {
     scroll-behavior: smooth;
 }
 .main-div{
-    margin-left: 20px;
-    margin-right: 20px;
+    // margin-left: 20px;
+    // margin-right: 20px;
     background-color: var(--bg-primary);
     min-height: 100vh;
 }
