life style section redesign

--- a/src/pages/Meuseum/style.scss
+++ b/src/pages/Meuseum/style.scss
@@ -3,7 +3,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url(https://www.mercedes-benz.com/en/art-and-culture/museum/_jcr_content/root/topstage_copy/image/MQ7-0-image-20191008132135/01-mercedes-benz-museum-overview-3400x1440.jpeg);
+    background-image: url(https://drive.google.com/uc?export=view&id=1giF7zRkZ6xXExA4xOETXAODgM3enil7I);
     padding-top: 100px;
     padding-left: 50px;
     font-family: 'Roboto', sans-serif;
