--- a/src/pages/sports/style.scss
+++ b/src/pages/sports/style.scss
@@ -1,5 +1,5 @@
 .sport-hero{
-    background-image:    url(https://www.mercedes-benz.com/en/more-about-sports/_jcr_content/root/slider/sliderchilditems/slideritem/image/MQ7-0-image-20220708101718/01-mercedes-benz-sport-3400x1440.jpeg);
+    background-image:    url(https://drive.google.com/uc?export=view&id=152Zajpdjx7rTuSwG4mr2mpTDyLHjqL6F);
     background-size:     cover;            
     background-repeat:   no-repeat;
     background-position: center center; 
