--- a/src/App.scss
+++ b/src/App.scss
@@ -15,3 +15,23 @@ html {
     background-color: var(--bg-primary);
     min-height: 100vh;
 }
+
+
+/* hover inplace zoom effect */
+#inplace-zoom-container {
+    display: inline-block;
+    overflow: hidden;
+  }
+  
+  #inplace-zoom-container, inplace-zoom-element {
+    display: block;
+    -moz-transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+  }
+  
+  #inplace-zoom-container:hover, inplace-zoom-element {
+    -moz-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
